--- a/index.html
+++ b/index.html
@@ -3,32 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 1</title>
+    <title>Cozinha Vital</title>
     <link rel="stylesheet" href="css/styles.css">
+</head>
 <body>
-    <h1 style="color: rgb(0, 0, 0);">Top músicas:</h1>
-    <a href="página 2 .html">página 2 </a>
-    <Ul style="color: snow;">
-        <li> Surreal	Luísa Sonza, Baco Exu do Blues	03:54</li>
-        <p>  escute: <a href="https://www.youtube.com/watch?v=H0sTP0mgtdI" target="_blank">aqui.</a></p>
-        <li> 20 Ligações	Baco Exu do Blues	03:13 </li>
-        <p>  escute: <a href="https://www.youtube.com/watch?v=Sq7pVppXesU" target="_blank">aqui.</a></p>
-        <li> Hotel Caro	Baco Exu do Blues, Luísa Sonza	03:41</li>
-        <p>  escute: <a href="https://www.youtube.com/watch?v=PQrWORayZTc" target="_blank">aqui.</a></p>
-        <li> Samba in Paris	Baco Exu do Blues, Gloria Groove  04:26</li>
-        <p>  escute: <a href="https://www.youtube.com/watch?v=4iKtTmnHojU" target="_blank">aqui</a></p>
-        <li> Flamingos	Baco Exu do Blues, Tuyo	03:57</li> 
-        <p>  escute: <a href="https://www.youtube.com/watch?v=hwGlsEgABBw" target="_blank">aqui.</a></p>
 
-    </Ul>
+<header>
+    <img src="img2/Cozinha vital (1).png" alt="Logo da Cozinha Vital" class="logo">
+    <h1>Cozinha Vital</h1>
+</header>
 
-    <h1 style="color: rgb(0, 0, 0);">Baco Exu do Blues</h1>
-    <h3 style="color: rgb(0, 0, 0);">QVVJFA?</h3>
-    <P style="color: snow;"> Saiba mais sobre Baco Exu do Blues: <a href="https://pt.wikipedia.org/wiki/Ba   co_Exu_do_Blues" target="_blank">clique aqui.</a></P>
-    <img src="img/5e0b16e052dfc815f39c7ecf302136d6.1000x563x1.jpg" alt="">
-    <img src="img/bacoexudoblues.webp" alt="">
-    <img src="img/baco.webp" alt="">
-    <img src="img/BACOOO.jpg" alt="">
-    <meta name="description" content="Diogo Álvaro Ferreira Moncorvo, mais conhecido como Baco Exu do Blues, é um rapper, cantor e compositor brasileiro.">
+<div class="sidebar">
+    <nav>
+        <ul>
+            <li><a href="index.html">Página Inicial</a></li>
+            <li><a href="página 2 .html">Saladas</a></li>
+            <li><a href="página 3 .html">Bebidas</a></li>
+            <li><a href="página 4 .html">Doces</a></li>
+            <li><a href="página 5 .html">Salgadas</a></li>
+            <li><a href="página 6 .html">Saiba mais</a></li>
+        </ul>
+    </nav>
+</div>
+
+    
+    <div class="content">
+        <h2>Bem vindos a um novo estilo de vida!</h2>
+        <p>Dê um passo em direção a uma vida mais saudável com nossas ideias simples e acessíveis para refeições nutritivas e balanceadas.</p>
+        <img src="img/2.webp" alt="">
+        <p>Aqui, acreditamos que cada refeição é uma oportunidade para nutrir não apenas o corpo,
+            mas também a mente e o espírito. Com uma seleção cuidadosamente curada de receitas, estamos aqui 
+            para inspirá-lo a descobrir o prazer de uma culinária que alimenta e energiza. Da nossa cozinha para a sua, vamos explorar juntos como ingredientes frescos e nutrientes poderosos podem transformar suas refeições em experiências gratificantes e saudáveis. Prepare-se para uma jornada culinária repleta de sabores vibrantes, texturas envolventes e pratos que não só satisfazem o paladar, mas também promovem o seu bem-estar geral. Seja bem-vindo ao nosso espaço, onde cada receita é uma celebração da vida e da saúde.
+        </p>
+    </div>
+    <footer>
+        <p>&copy; 2024 - Todos os direitos reservados</p>
+    </footer>
+
 </body>
 </html>
