--- a/página 2 .html
+++ b/página 2 .html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Salada</title>
+    <link rel="stylesheet" href="css/styles2.css">
 </head>
 <body>
-    <h1>página 2</h1>
+    <header>
+        <img src="img2/Cozinha vital (1).png" alt="Logo da Cozinha Vital" class="logo">
+        <h1>Cozinha Vital</h1>
+    </header>
+
+    <div class="sidebar">
+        <nav>
+            <ul>
+                <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="página 2 .html">Saladas</a></li>
+                <li><a href="página 3 .html">Bebidas</a></li>
+                <li><a href="página 4 .html">Doces</a></li>
+                <li><a href="página 5 .html">Salgadas</a></li>
+                <li><a href="página 6 .html">Saiba mais</a></li>
+            </ul>
+        </nav>   
+    </div>
+
+    <div class="content">
+        <h2>Saladas com Proteínas</h2>
+        <img src="img/2.webp" alt="Imagem de salada">
+        <ul>
+            <li><span>Salada de Frango com Melão e Lima da Pérsia:</span> uma mistura de sabores marca essa salada. Você tem o salgado do frango, o doce do melão e o toque cítrico da Lima da Pérsia. Por fim, um molho à base de iogurte e mel.</li>
+            <li><span>Salada Waldorf com Atum:</span> salada elegante e rica em sabores, conta com alface americana, maçãs verdes, salsão, nozes, uvas-passas e atum. Por fim, ainda tem um molho de Iogurte Natural Integral e azeitonas.</li>
+            <li><span>Salada Agridoce:</span> salada de alface americana, cebola roxa, manga e frango em tiras, com molho de vinagre balsâmico, azeite, MAGGI Fondor, mel e gergelim uma delícia. Ela também poderia entrar na categoria abaixo, já que conta com manga entre seus ingredientes.</li>
+            <li><span>Salada Tropical:</span> além das folhas, essa salada ainda conta com peito de peru e abacaxi. Uma ótima combinação.</li>
+            <li><span>Salada de Couve de Bruxelas com Molho de Mostarda:</span> a couve de Bruxelas ganha a companhia de ervilhas frescas e tomate cereja nessa salada, que é finalizada com um saboroso molho de mostarda dijon.</li>
+            <li><span>Salada Verde Meu Segredo:</span> com direito a alface, agrião, rúcula, tomate cereja e palmito, essa salada verde é uma ótima opção para quem está com pressa e não tem muito tempo para preparar a refeição.</li>
+        </ul>
+    </div>
+    <footer>
+        <p>&copy; 2024 - Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
+
